Tweaked and added rules to enforce consistency in package name, api-extractor dtsRollup, and package types field

--- a/tools/eslint-plugin-azure-sdk/tsconfig.json
+++ b/tools/eslint-plugin-azure-sdk/tsconfig.json
@@ -14,7 +14,8 @@
     "removeComments": true,
     "strict": true,
     "target": "es2016",
-    "types": ["node"]
+    "types": ["node"],
+    "sourceMap": true
   },
   "include": ["src", "tests"]
 }
