This package can now lint itself with `npm run lint:self`. Replaced buggy copyright header rule with a simpler exact-match rule and naive insert fixer.

--- a/tools/eslint-plugin-azure-sdk/.eslintrc.json
+++ b/tools/eslint-plugin-azure-sdk/.eslintrc.json
@@ -16,7 +16,8 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "project": "./tsconfig.json",
+    "createDefaultProgram": true
   },
   "parser": "@typescript-eslint/parser",
   "rules": {
