--- a/tools/eslint-plugin-azure-sdk/tsconfig.json
+++ b/tools/eslint-plugin-azure-sdk/tsconfig.json
@@ -16,5 +16,6 @@
     "target": "es2016",
     "types": ["node"]
   },
-  "include": ["src", "tests"]
+  "include": ["src", "tests"],
+  "exclude": ["node_modules"]
 }
