--- a/tools/eslint-plugin-azure-sdk/package.json
+++ b/tools/eslint-plugin-azure-sdk/package.json
@@ -42,6 +42,7 @@
     "test": "npm run clean && tsc -p tsconfig.json && mocha --timeout 10000 --recursive dist/tests"
   },
   "dependencies": {
+    "eslint-config-prettier": "^6.4.0",
     "fast-levenshtein": "^2.0.6",
     "glob": "^7.1.4",
     "typescript": "^3.4.5"
@@ -67,10 +68,14 @@
     "prettier": "^1.18.2"
   },
   "peerDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
-    "eslint": "^6.1.0"
+    "eslint": ">=6.0.0",
+    "eslint-plugin-no-only-tests": "^2.0.0",
+    "eslint-plugin-promise": "^4.0.0"
   },
   "engines": {
     "node": ">=8.0.0"
-  }
+  },
+  "prettier": "./prettier.json"
 }
